--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gradecam/clever-api",
-  "version": "2.0.0-beta.1",
+  "version": "2.0.0",
   "description": "Module for interacting with the Clever APIs.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
