--- a/package.json
+++ b/package.json
@@ -16,19 +16,19 @@
   "author": "GradeCam LLC",
   "license": "MIT",
   "devDependencies": {
-    "@types/jest": "^24.0.9",
-    "@types/node": "^11.9.5",
-    "@types/qs": "^6.5.1",
-    "jest": "^24.1.0",
-    "jest-junit": "^6.3.0",
-    "ts-jest": "^24.0.0",
-    "ts-node": "^8.0.2",
-    "tslib": "^1.9.3",
-    "typescript": "^3.3.3333"
+    "@types/jest": "^24.0.18",
+    "@types/node": "^10.0.0",
+    "@types/qs": "^6.5.3",
+    "jest": "^24.9.0",
+    "jest-junit": "^6.4.0",
+    "ts-jest": "^24.0.2",
+    "ts-node": "^8.3.0",
+    "typescript": "^3.5.3"
   },
   "dependencies": {
-    "axios": "^0.18.0",
-    "qs": "^6.6.0"
+    "axios": "^0.19.0",
+    "qs": "^6.8.0",
+    "tslib": "^1.10.0"
   },
   "publishConfig": {
     "access": "public",
